# swagger-output.json
@@ -169,32 +169,6 @@
         "responses": {
           "200": {
             "description": "Login exitoso."
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "correo": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
           }
         }
       }
@@ -321,6 +295,40 @@
         }
       }
     },
+    "/api/Asignaturas/upload": {
+      "post": {
+        "tags": [
+          "Asignatura"
+        ],
+        "description": "Endpoint para crear asignaturas desde un archivo CSV.",
+        "responses": {
+          "200": {
+            "description": "Asignaturas creadas correctamente.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Asignatura"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Asignatura"
+                }
+              }
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/Carreras": {
       "get": {
         "tags": [
@@ -330,6 +338,17 @@
         "responses": {
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Carreras"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -353,6 +372,40 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/Carreras/upload": {
+      "post": {
+        "tags": [
+          "Carrera"
+        ],
+        "description": "Endpoint para crear carreras desde un archivo CSV.",
+        "responses": {
+          "200": {
+            "description": "Carreras creadas correctamente.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Carrera"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Carrera"
+                }
+              }
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -522,6 +575,56 @@
         "responses": {
           "default": {
             "description": ""
+          }
+        }
+      }
+    },
+    "/api/Horarios": {
+      "get": {
+        "tags": [
+          "Horarios"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/Horarios/upload": {
+      "post": {
+        "tags": [
+          "Horario"
+        ],
+        "description": "Endpoint para crear horarios desde un archivo CSV.",
+        "responses": {
+          "200": {
+            "description": "Horarios creados correctamente.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Horario"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Horario"
+                }
+              }
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -801,11 +904,15 @@
             "type": "number",
             "example": 1
           },
-          "id_profesor": {
+          "id_docente": {
             "type": "number",
             "example": 1
           },
           "id_asignatura": {
+            "type": "number",
+            "example": 1
+          },
+          "id_horario": {
             "type": "number",
             "example": 1
           },
@@ -832,8 +939,9 @@
         },
         "required": [
           "numero",
-          "id_profesor",
+          "id_docente",
           "id_asignatura",
+          "id_horario",
           "periodo",
           "year",
           "aula",
@@ -847,10 +955,6 @@
       "Horario": {
         "type": "object",
         "properties": {
-          "id_seccion": {
-            "type": "number",
-            "example": 1
-          },
           "dia": {
             "type": "number",
             "example": 1
@@ -865,7 +969,6 @@
           }
         },
         "required": [
-          "id_seccion",
           "dia",
           "hora_inicio",
           "hora_fin"
